syntax = "proto3";

package protocol;

option go_package = "/protocol";

import "user.proto";

message SignOutReq {
  User user = 1;
}

message SignOutRes {}